style: applied Google Java format and added spotless plugin